<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/all"
    android:background="@drawable/rounded_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:text="@string/precision_title"
        android:textColor="@color/foreground"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/precision_desc"
        android:textColor="@color/foreground"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/seekBar0"
        android:padding="10dp"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar"
        android:thumbTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/precisionText0"
        android:textSize="15sp"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textColor="@color/foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="Set the number of digits before scientific notation is used."
        android:textColor="@color/foreground"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/seekBar1"
        android:padding="10dp"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar"
        android:thumbTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/precisionText1"
        android:textSize="15sp"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textColor="@color/foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

   <LinearLayout
       android:layout_marginTop="10dp"
       android:layout_margin="5dp"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/cancel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="5dp"
           android:layout_weight="1"
           android:background="@drawable/rounded"
           android:clickable="true"
           android:focusable="true"
           android:gravity="center"
           android:text="@string/cancel"
           android:textSize="25sp" />

       <TextView
           android:id="@+id/ok"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="5dp"
           android:layout_weight="1"
           android:background="@drawable/rounded"
           android:clickable="true"
           android:focusable="true"
           android:gravity="center"
           android:text="@string/set"
           android:textSize="25sp" />

   </LinearLayout>

</LinearLayout>