<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_boring"
            android:gravity="end"
            android:padding="3dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="Hello World!"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="("
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text=")"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/modulo"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/divide"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/times"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="1/x"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="7"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="8"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="9"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="-"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="n!"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="4"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="5"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="6"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="+"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="x^y"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="1"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="2"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="3"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/enter"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="sqrt"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="0"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/dot"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="*10^"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/left_arrow"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
